Task 1.1 Рефракторинг функции